# swc-plugin-nativewind

./: .gitignore  Cargo.toml  README.md  demo.ts  package.json  tsconfig.json
src/: lib.rs
transform/: Cargo.toml
transform/src/: constants.rs  lib.rs  react_collector.rs
transform/tests/: fixture.rs
transform/tests/fixture/cjs/non_create_element/: input.js  output.js
transform/tests/fixture/cjs/require/: output.js
transform/tests/fixture/cjs/require_interop/: input.js  output.js
transform/tests/fixture/create_element_by_namespace_require/: input.js
transform/tests/fixture/create_element_by_namespace_require_lowercase/: input.js
transform/tests/fixture/create_element_identifier_by_default_import/: output.js
transform/tests/fixture/create_element_identifier_by_import/: output.js
transform/tests/fixture/create_element_identifier_by_require/: output.js
transform/tests/fixture/default/create_element_by_namespace_import/: input.js  output.js
transform/tests/fixture/default/create_element_by_namespace_require/: output.js
transform/tests/fixture/default/create_element_by_namespace_require_lowercase/: output.js
transform/tests/fixture/default/create_element_from_3rd_party/: input.js
transform/tests/fixture/default/create_element_identifier_by_default_import/: input.js
transform/tests/fixture/default/create_element_identifier_by_import/: input.js
transform/tests/fixture/default/create_element_identifier_by_require/: input.js
transform/tests/fixture/esm/import_default_react/: output.js
transform/tests/fixture/without_react/: input.js  output.js
(+10 files in other folders)
