[package]
name = "swc_plugin_nativewind"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = "1"
swc_core = { version = "0.86.*" }
swc_nativewind = { path = "./transform" }

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
